# py-json-analyzer

./: .gitignore  .json_explorer_input_history  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
data_samples/: 001_sample_project.json  002_sample_project.json
docs/: _config.yml  index.css  index.md
json_explorer/: __init__.py  analyzer.py  cli.py  codegen.py  filter_parser.py  interactive.py  main.py  search.py  stats.py  utils.py  visualizer.py
json_explorer/codegen/: __init__.py  cli_integration.py  interactive.py  registry.py
json_explorer/codegen/core/: __init__.py  config.py  generator.py  naming.py  schema.py  templates.py
json_explorer/codegen/languages/: __init__.py
json_explorer/codegen/languages/go/: __init__.py  config.py  generator.py  interactive.py  naming.py  types.py
json_explorer/codegen/languages/go/templates/: complete_file.go.j2  imports.go.j2  json_tags.go.j2  package.go.j2  struct.go.j2
json_explorer/codegen/languages/py/: naming.py
json_explorer/codegen/languages/python/: __init__.py  config.py  generator.py  interactive.py  naming.py
tests/: test_gen_conftest.py
