[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-json-analyzer"
version = "0.2.0"
description = "Analyze, visualize, and explore JSON data from files or URLs"
authors = [
    { name="MS-32154", email="msttoffg@gmail.com" }
]
dependencies = [
    "dateparser",
    "rich",
    "requests",
    "matplotlib",
    "numpy",
    "windows-curses; sys_platform == 'win32'"
]
requires-python = ">=3.7"
readme = "README.md"
license = "MIT"

[project.scripts]
json_explorer = "json_explorer.main:main"
