[metadata]
name = py-json-analyzer
version = 0.3.0
description = A powerful CLI and Python library for analyzing, visualizing, exploring, and generating code from JSON data
long_description = file: README.md
long_description_content_type = text/markdown
author = MS-32154
license = MIT

[options]
packages = find:
install_requires =
    numpy
    requests
    rich
    matplotlib
    dateparser
    jinja2
    windows-curses; sys_platform == "win32"
python_requires = >=3.11

[options.entry_points]
console_scripts =
    json_explorer = json_explorer.main:main
